# nti-2022-backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
samples/: index.html
src/: alv.py  device.py  events.py  main.py  state.py  typedefs.py
src/api/: __init__.py  security.py  ws.py
src/api/routes/: __init__.py  auth.py  card.py  device.py  face.py  history.py  journal.py
src/db/: __init__.py
src/face/: preprocess.py  recognizer.py  wrapper.py
src/measurements/: MeasurementModel.py
src/user/: model.py
