[tool.poetry]
name = "nti-2022-backend"
version = "0.1.0"
description = ""
authors = ["leadpogrommer <ilyamerzlakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
Inject = "^4.3.1"
aiohttp = "^3.8.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
