[tool.poetry]
name = "nti-2022-backend"
version = "0.1.0"
description = "backend from nti-2022 by cfeee1e5e4e00a"
authors = ["cfeee1e5e4e00a"]

[tool.poetry.scripts]
start = "src:main"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
Inject = "^4.3.1"
aiohttp = "^3.8.1"
python-dotenv = "^0.19.2"
aiohttp_security = "^0.4.0"
aiohttp-session = "^2.11.0"
gino = "^1.0.1"
aioredis = "^2.0.1"
aiohttp_cors = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
